--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <button id="">Sensibilité</button>
     </div>
     <div id="conteneur-citation">
-      
+      <blockquote id="cite"></blockquote>
     </div>
   </main>
 </body>
