--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
     <h1>Les Citations</h1>
   </header>
   <main>
+    <p id="explication">Choisissez vos thèmes</p>
     <div class="conteneur-options">
-      <button id="">Bonheur</button>
-      <button id="">Courage</button>
-      <button id="">Folie</button>
-      <button id="">Liberté</button>
-      <button id="">Morale</button>
-      <button id="">Politique</button>
-      <button id="">Sagesse</button>
-      <button id="">Sensibilité</button>
+      <button id="tous">Tous</button>
+      <button id="bon">Bonheur</button>
+      <button id="cou">Courage</button>
+      <button id="lib">Liberté</button>
+      <button id="sag">Sagesse</button>
+      <button id="mor">Morale</button>
     </div>
     <div id="conteneur-citation">
       <blockquote id="cite"></blockquote>
+      <div id="auteur"></div>
     </div>
   </main>
 </body>
