Debut de l'algorithme permettant le choix utilisateur

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <main>
     <p id="explication">Choisissez vos thèmes</p>
     <div class="conteneur-options">
-      <button id="tous">Tous</button>
+      <button id="tous" class="button-true">Tous</button>
       <button id="bon">Bonheur</button>
       <button id="cou">Courage</button>
       <button id="lib">Liberté</button>
