fin de l'algo et ajout de citations

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <h1>Les Citations</h1>
   </header>
   <main>
-    <p id="explication">Choisissez vos thèmes</p>
+    <p id="explication">Choisissez votre thème</p>
     <div class="conteneur-options">
-      <button id="tous" class="button-true">Tous</button>
+      <button id="tous">Tous</button>
       <button id="bon">Bonheur</button>
       <button id="cou">Courage</button>
       <button id="lib">Liberté</button>
