finition de la logique et mise en place de l'animation sur chaques citations

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <h1>Les Citations</h1>
   </header>
   <main>
-    <p id="explication">Choisissez votre thème</p>
+    <p id="explication">Choisissez le thème de la prochaine citation</p>
     <div class="conteneur-options">
       <button id="tous">Tous</button>
       <button id="bon">Bonheur</button>
@@ -24,10 +24,10 @@
       <button id="lib">Liberté</button>
       <button id="sag">Sagesse</button>
       <button id="mor">Morale</button>
+      <button id="rev">Rêve</button>
+      <button id="sen">Sensibilité</button>
     </div>
     <div id="conteneur-citation">
-      <blockquote id="cite"></blockquote>
-      <div id="auteur"></div>
     </div>
   </main>
 </body>
