--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <header>
-    <h1>Les Citations</h1>
+    <h1>Les plus belles Citations</h1>
   </header>
   <main>
     <p id="explication">Choisissez le thème de la prochaine citation</p>
@@ -30,6 +30,6 @@
     <div id="conteneur-citation">
     </div>
   </main>
-  <footer>&copy;</footer>
+  <footer>2021 &copy;</footer>
 </body>
 </html>
