--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <button id="mor">Morale</button>
       <button id="rev">Rêve</button>
       <button id="sen">Sensibilité</button>
+      <form action="#">
+        <input type="text" placeholder="Recherche par terme ou auteur" id="mots" autofocus maxlength="25" pattern="[a-zA-Z]+">
+      </form>
     </div>
     <div id="conteneur-citation">
     </div>
