--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <button id="rev">Rêve</button>
       <button id="sen">Sensibilité</button>
       <form action="#">
-        <input type="text" placeholder="Recherche par terme ou auteur" id="mots" autofocus maxlength="25" pattern="[a-zA-Z]+">
+        <input type="text" placeholder="Rechercher" id="mots" autofocus maxlength="25" pattern="[a-zA-Z]+">
       </form>
     </div>
     <div id="conteneur-citation">
