--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
     <div id="conteneur-citation">
     </div>
   </main>
-  <footer>2021 &copy;</footer>
+  <footer>2021 &copy; Johan Guin</footer>
 </body>
 </html>
