--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Blabla">
+  <link rel="icon" href="assets/Sylvain_Marechal.jpg">
   <link rel="stylesheet" href="style.css">
   <script src="cite.js" defer></script>
   <script src="main.js" defer></script>
